# ferric-rules

./: .gitattributes  .gitignore  AGENTS.md  COMPATIBILITY_ROADMAP.md  Cargo.toml  GO_BINDINGS_DUE_DILIGENCE.md  LICENSE-APACHE  LICENSE-MIT  PROPERTY_TEST_COVERAGE_PLAN.md  PYB-001_DROP_THREAD_AFFINITY_FOLLOWUP.md  PYTHON_BINDING_REMEDIATION_REPORT.md  README.md  SESSION-WORK-MEMO.md  THIRD_PARTY.md  THIRD_PARTY_NOTICES.md  about.toml  justfile
crates/ferric/: Cargo.toml
crates/ferric-cli/: Cargo.toml
crates/ferric-cli/src/: main.rs
crates/ferric-cli/src/commands/: check.rs  common.rs  mod.rs  repl.rs  run.rs  snapshot.rs  version.rs
crates/ferric-cli/tests/: cli_helpers.rs  cli_integration.rs
crates/ferric-core/: Cargo.toml
crates/ferric-core/benches/: storage_indices_bench.rs
crates/ferric-core/proptest-regressions/: beta.txt  binding.txt  exists.txt  ncc.txt  negative.txt  token.txt
crates/ferric-core/src/: agenda.rs  alpha.rs  beta.rs  binding.rs  compiler.rs  encoding.rs  exists.rs  fact.rs  lib.rs  ncc.rs  negative.rs  rete.rs  serde_helpers.rs  strategy.rs  string.rs  symbol.rs  token.rs  tracing_support.rs  validation.rs  value.rs
crates/ferric-ffi/: Cargo.toml  build.rs  cbindgen.toml  ferric.h
crates/ferric-ffi/src/: engine.rs  error.rs  header.rs  lib.rs  pinned.rs  tests.rs  types.rs
crates/ferric-ffi/src/tests/: action_diagnostics.rs  build_matrix.rs  contract_lock.rs  copy_error.rs  diagnostic_parity.rs  error_model.rs  execution.rs  ffi_expansion.rs  header.rs  lifecycle.rs  pinned.rs  template_assertion.rs  test_helpers.rs  values.rs
crates/ferric-napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/ferric-napi/src/: config.rs  engine.rs  error.rs  fact.rs  lib.rs  result.rs  value.rs
crates/ferric-parser/: Cargo.toml
crates/ferric-parser/src/: error.rs  lexer.rs  lib.rs  qualified_name.rs  sexpr.rs  span.rs  stage2.rs
crates/ferric-pinned/: Cargo.toml
crates/ferric-pinned/src/: autorelease.rs  engine.rs  error.rs  lib.rs  options.rs  request.rs  worker.rs
crates/ferric-pinned/tests/: cancellation.rs  close_drain.rs  fifo.rs  panic_propagation.rs  smoke.rs
crates/ferric-python/: Cargo.toml  pyproject.toml
crates/ferric-python/src/: config.rs  engine.rs  error.rs  fact.rs  lib.rs  result.rs  value.rs
crates/ferric-python/tests/: conftest.py  double_coverage.py  test_api_surface.py  test_config.py  test_double_coverage_contract.py  test_engine.py  test_errors.py  test_execution.py  test_facts.py  test_generative_api_coverage.py  test_introspection.py  test_io.py  test_manual_api_coverage.py  test_protocols.py  test_public_surface.py  test_serialization.py  test_template_facts.py  test_threading.py  test_values.py
crates/ferric-runtime/: Cargo.toml
crates/ferric-runtime/benches/: name_registry_bench.rs  rule_index_bench.rs  serialization_bench.rs  template_registry_bench.rs
crates/ferric-runtime/src/: actions.rs  config.rs  engine.rs  evaluator.rs  execution.rs  functions.rs  integration_tests.rs  lib.rs  loader.rs  modules.rs  phase2_integration_tests.rs  phase3_integration_tests.rs  phase4_integration_tests.rs  qualified_name.rs  router.rs  serialization.rs  templates.rs  test_helpers.rs  tracing_support.rs
crates/ferric-runtime/tests/fixtures/: forall_vacuous_truth.clp  phase2_chain.clp  phase2_salience.clp  phase3_deffunction.clp  phase3_defmodule.clp  phase3_expression_eval.clp  phase4_agenda_focus.clp  phase4_generic_dispatch.clp  phase4_module_qualified.clp  phase4_stdlib_math.clp  phase4_stdlib_multifield.clp
crates/ferric/benches/: alpha_fanout_bench.rs  cascade_bench.rs  churn_bench.rs  compile_bench.rs  constraint_bench.rs  engine_bench.rs  evaluator_bench.rs  exists_bench.rs  forall_bench.rs  join_bench.rs  manners_bench.rs  module_bench.rs  negation_bench.rs  query_bench.rs  serialization_bench.rs  strategy_bench.rs  waltz_bench.rs
crates/ferric/src/: lib.rs
crates/ferric/tests/: clips_compat.rs  scaling_tests.rs
examples/users-guide/01-minimal-embedding/: Cargo.toml  README.md  justfile
examples/users-guide/01-minimal-embedding/src/: main.rs
examples/users-guide/02-ordered-vs-template/: Cargo.toml  README.md  justfile
examples/users-guide/02-ordered-vs-template/rules/: people.clp
examples/users-guide/02-ordered-vs-template/src/: main.rs
examples/users-guide/03-salience-and-guards/: Cargo.toml  README.md  justfile
examples/users-guide/03-salience-and-guards/rules/: alerts.clp
examples/users-guide/03-salience-and-guards/src/: main.rs
examples/users-guide/04-pattern-menagerie/: Cargo.toml  README.md  justfile
examples/users-guide/04-pattern-menagerie/rules/: menagerie.clp
examples/users-guide/04-pattern-menagerie/src/: main.rs
examples/users-guide/05-rhs-actions/: Cargo.toml  README.md  justfile
examples/users-guide/05-rhs-actions/rules/: counter.clp
examples/users-guide/05-rhs-actions/src/: main.rs
examples/users-guide/06-functions-and-generics/: Cargo.toml  README.md  justfile
examples/users-guide/06-functions-and-generics/rules/: describe.clp  temp.clp
examples/users-guide/06-functions-and-generics/src/: main.rs
examples/users-guide/07-globals/: Cargo.toml  README.md  justfile
examples/users-guide/07-globals/rules/: sessions.clp
examples/users-guide/08-modules-and-focus/: Cargo.toml  README.md  justfile
examples/users-guide/09-driving-from-rust/: Cargo.toml  README.md  justfile
examples/users-guide/10-io-channels/: Cargo.toml  README.md  justfile
examples/users-guide/11-configuration/: Cargo.toml  README.md  justfile
examples/users-guide/12-error-handling/: Cargo.toml  README.md  justfile
examples/users-guide/13-snapshots/: Cargo.toml  README.md  justfile
examples/users-guide/14-pipeline/: Cargo.toml  README.md  justfile
tools/ferric-tools/: pyproject.toml
tools/ferric-tools/tests/: test_bat_analyze.py  test_clips_parser.py  test_compat_diff.py  test_compat_scan.py  test_formatting.py  test_manifest.py  test_paths.py  test_perf_diff.py
tools/users-guide-sync/: Cargo.toml
tools/users-guide-sync/src/: main.rs
(+733 files in other folders)
