[workspace]
members = [
    "crates/ferric",
    "crates/ferric-bench-gen",
    "crates/ferric-cli",
    "crates/ferric-core",
    "crates/ferric-ffi",
    "crates/ferric-napi",
    "crates/ferric-parser",
    "crates/ferric-runtime",
    "crates/ferric-python",
    "examples/users-guide/*",
    "tools/users-guide-sync",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prb/ferric-rules"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Line editing for interactive REPL
rustyline = "17"

# C header generation (build-time only)
cbindgen = "0.29"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
serde_json = "1"
ciborium = "0.2"
rmp-serde = "1"
postcard = { version = "1", features = ["alloc"] }

# Slot-based storage (serde feature always on — negligible cost, needed when serde is enabled)
slotmap = { version = "1", features = ["serde"] }

# Small inline vectors (serde feature always on — negligible cost, needed when serde is enabled)
smallvec = { version = "1", features = ["serde"] }

# Faster internal hash tables/sets
rustc-hash = "2"

# PyO3 Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-build-config = "0.23"

# napi-rs Node.js bindings
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
napi-build = "2"

# Property-based testing
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Tracing / profiling (optional, feature-gated)
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
tracing-chrome = "0.7"

# Internal crates
ferric = { path = "crates/ferric" }
ferric-core = { path = "crates/ferric-core" }
ferric-ffi = { path = "crates/ferric-ffi" }
ferric-cli = { path = "crates/ferric-cli" }
ferric-parser = { path = "crates/ferric-parser" }
ferric-runtime = { path = "crates/ferric-runtime" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic false-positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

# FFI profile: development builds with panic=abort for C ABI safety
[profile.ffi-dev]
inherits = "dev"
panic = "abort"

# FFI profile: release builds with panic=abort for C ABI safety
[profile.ffi-release]
inherits = "release"
panic = "abort"
