[package]
name = "ferric-cli"
description = "Command-line interface for the Ferric rules engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ferric"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ferric-core = { workspace = true }
ferric-parser = { workspace = true }
ferric-runtime = { workspace = true }
rustyline = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }

[features]
tracing = ["trace-chrome"]
trace-chrome = ["dep:tracing", "dep:tracing-chrome", "dep:tracing-subscriber", "ferric-runtime/tracing"]

[dev-dependencies]
proptest = { workspace = true }
serde_json = "1"
tempfile = "3.8"

[lints]
workspace = true
