[package]
name = "ferric-core"
description = "Rete network, pattern matching, and agenda — core engine internals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
