[package]
name = "ferric-core"
description = "Rete network, pattern matching, and agenda — core engine internals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "storage_indices_bench"
harness = false

[lints]
workspace = true
