[package]
name = "ferric-ffi"
description = "C-ABI foreign function interface for the Ferric rules engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ferric-core = { workspace = true }
ferric-parser = { workspace = true }
ferric-runtime = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
tracing = ["dep:tracing", "ferric-runtime/tracing"]

[build-dependencies]
cbindgen = { workspace = true }

[dev-dependencies]
cbindgen = { workspace = true }
proptest = { workspace = true }

# FFI crate must allow unsafe code for C-ABI exports
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
