[package]
name = "ferric-parser"
description = "Lexer, S-expression parser, and AST for CLIPS-compatible rule syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
