[package]
name = "ferric-pinned"
description = "Rust-owned pinned execution layer for Ferric: worker-thread engine with serialized request queue, batching, autorelease management, and cooperative cancellation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
serde = ["ferric-runtime/serde"]
tracing = ["dep:tracing", "ferric-runtime/tracing"]

[dependencies]
ferric-runtime = { workspace = true }
tracing = { workspace = true, optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = { workspace = true }

[dev-dependencies]
ferric-runtime = { workspace = true, features = ["serde"] }

[lints]
workspace = true
