[package]
name = "ferric-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "ferric"
crate-type = ["cdylib"]

[dependencies]
ferric-core = { workspace = true }
ferric-runtime = { workspace = true }
pyo3 = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["ferric-runtime/serde"]
tracing = ["dep:tracing", "ferric-runtime/tracing"]

[build-dependencies]
pyo3-build-config = { workspace = true }

[lints.rust]
# PyO3 proc macros generate unsafe code in expanded output
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# PyO3 conventions differ from normal Rust naming
new_without_default = "allow"
used_underscore_binding = "allow"
needless_pass_by_value = "allow"
