[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferric"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "maturin>=1.0,<2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
