[package]
name = "ferric-runtime"
description = "Engine, execution environment, value types, and symbol interning for Ferric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferric-core = { workspace = true }
ferric-parser = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
slotmap = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.8"
criterion = { workspace = true }

[[bench]]
name = "name_registry_bench"
harness = false

[lints]
workspace = true
