[package]
name = "ferric"
description = "A CLIPS-inspired rules engine — public facade crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferric-core = { workspace = true }
ferric-parser = { workspace = true }
ferric-runtime = { workspace = true }

[lints]
workspace = true
