[package]
name = "ferric"
description = "A CLIPS-inspired rules engine — public facade crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferric-core = { workspace = true }
ferric-parser = { workspace = true }
ferric-runtime = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "manners_bench"
harness = false

[[bench]]
name = "waltz_bench"
harness = false

[[bench]]
name = "join_bench"
harness = false

[[bench]]
name = "churn_bench"
harness = false

[[bench]]
name = "negation_bench"
harness = false

[lints]
workspace = true
