[package]
name = "ferric"
description = "A CLIPS-inspired rules engine — public facade crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
serde = ["ferric-runtime/serde"]
tracing = ["ferric-runtime/tracing"]

[dependencies]
ferric-core = { workspace = true }
ferric-parser = { workspace = true }
ferric-runtime = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "manners_bench"
harness = false

[[bench]]
name = "waltz_bench"
harness = false

[[bench]]
name = "join_bench"
harness = false

[[bench]]
name = "churn_bench"
harness = false

[[bench]]
name = "negation_bench"
harness = false

[[bench]]
name = "exists_bench"
harness = false

[[bench]]
name = "forall_bench"
harness = false

[[bench]]
name = "strategy_bench"
harness = false

[[bench]]
name = "alpha_fanout_bench"
harness = false

[[bench]]
name = "cascade_bench"
harness = false

[[bench]]
name = "evaluator_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "compile_bench"
harness = false

[[bench]]
name = "module_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false
required-features = ["serde"]

[[bench]]
name = "constraint_bench"
harness = false

[lints]
workspace = true
