[package]
name = "users-guide-sync"
description = "Verifies that the inlined code blocks in docs/users-guide.md still appear in the example projects."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
