[package]
name = "users-guide-01-minimal-embedding"
description = "Users-guide example: a minimal embedding of ferric-rules."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }

[lints]
workspace = true
