[package]
name = "users-guide-04-pattern-menagerie"
description = "Users-guide example: negation, exists, forall, NCC, and constraint connectives."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
