[package]
name = "users-guide-05-rhs-actions"
description = "Users-guide example: RHS actions — modify, retract, duplicate, bind."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
