[package]
name = "users-guide-06-functions-and-generics"
description = "Users-guide example: deffunction and defgeneric / defmethod."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
