[package]
name = "users-guide-07-globals"
description = "Users-guide example: defglobal and host-side reads."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
