[package]
name = "users-guide-11-configuration"
description = "Users-guide example: EngineConfig and conflict resolution strategy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
