[package]
name = "users-guide-12-error-handling"
description = "Users-guide example: fatal errors vs. action diagnostics."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
