[package]
name = "users-guide-14-pipeline"
description = "Users-guide example: a phased sensor diagnosis pipeline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ferric = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
